# search-replace-py

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.cursor/plans/: extract-editblock-search-replace_66c9123a.plan.md
.github/workflows/: lint.yml  test.yml
search_replace/: __init__.py  apply.py  errors.py  fuzzy.py  parser.py  prompts.py  types.py
tests/: test_apply.py  test_parity_harness.py  test_parser.py  test_prompts.py
tests/fixtures/: chat-history-search-replace-gold.txt
