[project]
name = "search-replace-py"
version = "0.0.1"
description = "Parse and apply Aider-style SEARCH/REPLACE patch blocks to files"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

license = { file = "LICENSE" }
authors = [{ name = "marcin" }]
keywords = ["search", "replace", "patch", "diff", "editblock", "aider", "llm", "tooling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/marcius-llmus/search-replace-py"
Repository = "https://github.com/marcius-llmus/search-replace-py"
Issues = "https://github.com/marcius-llmus/search-replace-py/issues"
Changelog = "https://github.com/marcius-llmus/search-replace-py/releases"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.2.2,<1.0.0",
    "black>=25.12.0",
    "mypy>=1.8.0,<2.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["search_replace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
